Updated group pages and group wiki to make images have a max width of 100% to prevent getting cut off

--- a/components/com_groups/assets/css/managepages.css
+++ b/components/com_groups/assets/css/managepages.css
@@ -137,6 +137,10 @@ table tr:first-child td {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c4c4c4', endColorstr='#a2a2a2');
 }
 
+.preview img {
+	max-width:100%;
+}
+
 .parsed {
 	padding:10px 15px;
 }
